style.css
/* ... */
  .menu-default-container {
  	background-color: #cc0000;
  	margin-bottom: 2.8rem;
  	width: 100%;
  }

  	.menu-default-container > ul {
  		display: block;
  		line-height: 1em;
  		list-style: none;
  		margin: 0 auto;
  		padding: 0;
      max-width: 98.8rem;
  	}

#content_column_container {
	margin: 0 auto 2.8rem auto;
	width: 96.8rem;
}

	#content_column {
		float: left;
		width: 64rem;
		max-width: 64rem;
	}

		.post {
			margin-bottom: 6rem;
			position: relative;
		}

	ul#sidebar_column {
		float: right;
		margin: 0;
    padding: 0;
		width: 30rem;
	}

#footer_container {
  background-color: #ddd;
	margin: 0;
	padding: 0;
	width: 100%;
}

	#footer {
		margin: 0 auto;
		min-height: 18rem;
		padding: 2.8rem 1rem;
		width: 96.8rem;
	}


/*------------------------------
Typography
------------------------------*/

/* Equity is the default font. */
body {
	font-family: equity, serif;
  font-variant-ligatures: common-ligatures;
}


/* Things that use Concourse */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: concourse-headings, sans-serif;
}

aside blockquote,
button,
.button,
.drop_cap,
.category_list,
.current_posts_headline,
#footer,
#header,
input[type="button"],
.flag,
.fp_tab h2,
.fp_bottom_tab h2,
label,
#lab_posts,
.pagenav_link,
#popular_posts_tabbed,
.postmeta,
p.pullout,
p.pullquote,
#series_nav li,
.tag_list,
.theiaPostSlider_nav ._text,
ul#menu-default {
  font-family: concourse, sans-serif;
}


/* Things that use Triplicate */
code,
pre {
  font-family: triplicate, monospace;
}

/* Font overrides. */
.gfield_radio label {
  font-family: equity, serif;
}


/* Typography */
body {
	color: #111;
}

.page,
.post,
.post_body,
#footer {
	font-size: 1.8rem;
	line-height: 1.5;
}

a,
a:visited {
	color: #cc0000;
	text-decoration: none;
}

a:hover,
a:focus {
	color: #aa0000;
	text-decoration: underline;
}

blockquote {
	border-left: 1px solid #ddd;
	color: #777;
	margin: 0 0 2.8rem 0;
	padding: 0 0 0 1.9rem;
}

  aside blockquote,
  p.pullquote {
    border: none;
    clear: both;
    color: #888;
    font-size: 2.8rem;
    font-style: italic;
    margin: 0 2.8rem 2.8rem 2.8rem;
    padding: 0;
  }

code {
	color: #777;
  font-size: 1.6rem;
	white-space: pre-wrap; /* css-3 */
	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
	white-space: -pre-wrap; /* Opera 4-6 */
	white-space: -o-pre-wrap; /* Opera 7 */
	word-wrap: break-word; /* Internet Explorer 5.5+ */
}

.drop_cap {
	float: left;
	font-size: 3.2rem;
	font-weight: bold;
	line-height: 1em;
	padding-right: .5em;
}

em,
i,
italic,
italics {
  font-style: italic;
}

embed,
iframe {
  margin-bottom: 2.8rem !important;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	color: #333;
  font-weight: bold;
  line-height: 1.15;
  margin-top: 0;
}

h1 em,
h2 em,
h3 em,
h4 em,
h5 em,
h6 em {
	color: #333;
  font-style: italic;
  font-weight: bold;
  margin-top: 0;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
	font-weight: inherit;
}

h1,
h2 {
	font-size: 3.8rem;
	margin-bottom: .25em;
}

h3 {
	font-size: 2.8rem;
	margin-bottom: .5em;
}

h4 {
	font-size: 2.4rem;
	margin-bottom: .5em;
}

h5 {
	font-size: 2.2rem;
	margin-bottom: .5em;
}

h6 {
	font-size: 2rem;
	margin-bottom: .75em;
}

hr {
	border: solid #ddd;
	border-width: 1px 0 0;
	clear: both;
	height: 0;
	margin: 1rem 0 1em;
}

p {
	margin-bottom: 1em;
  margin-top: 0;
}

p.note {
	background-color: #f5f5f5;
  border: 1px solid #ddd;
	padding: 1.5rem 2.5rem;
}

p.alert {
	background-color: #ffffa0;
  border: 1px solid #ddd;
	padding: 1.5rem 2.5rem;
}

p.pullout {
	background: #eee;
  border: 1px solid #ddd;
	display: inline-block;
	float: right;
	margin: 0 0 1.5rem 1.5rem;
	padding: 1.5rem 2.5rem 2rem 2.5rem;
	width: 39.0625%;
}

	p.pullout .pullout_label {
    color: #888;
		display: block;
    font-size: 1.6rem;
    font-weight: bold;
		margin-bottom: .5em;
	}

	p.pullout.left {
		float: left;
		margin: 0 1.5rem 1.5rem 0;
	}

p.wp-caption-text {
     color: #666;
     font-size: 1.4rem;
}

.postmeta {
	color: #777;
  font-size: 1.6rem;
  line-height: 1.4;
  margin-bottom: 1em;
}

pre {
	color: #555;
	margin-bottom: 1em;
	margin-left: 2.8rem;
	white-space: pre-wrap; /* css-3 */
	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
	white-space: -pre-wrap; /* Opera 4-6 */
	white-space: -o-pre-wrap; /* Opera 7 */
	word-wrap: break-word; /* Internet Explorer 5.5+ */
}

small {
	font-size: 80%;
}

strong,
b,
bold {
	font-weight: bold;
}

sup {
	font-size: 75%;
}

.syntaxhighlighter {
	font-size: 1.4rem;
	margin-bottom: 2.8rem;
}

ol,
ul {
	margin-bottom: 1em;
	margin-left: 2.8rem;
  padding: 0;
}

ol.footnotes li {
  font-size: 1.4rem;
  margin-bottom: 1em;
}

li {
	margin-bottom: 1.4rem;
  padding: 0;
}



/*------------------------------
Images
------------------------------*/

img.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto 1em auto;
}

img.alignleft {
	float: left;
	margin: 0 1.5rem 1em 0;
}

img.alignright {
	float: right;
	margin: 0 0 1em 1.5rem;
}

img.avatar {
	border-radius: 5rem;
}

img.size-thumbnail {
	height: auto;
	width: 23.4375%;
}

img.size-medium {
	height: auto;
	width: 46.875%;
}

img.size-large {
	height: auto;
	width: 100%;
}

img.size-full {
	height: auto;
	width: auto;
}

img.wp-post-image.attachment-medium {
	float: right;
	height: auto;
	margin: 0 0 1em 1.5rem;
	width: 46.875%;
}

img.wp-post-image.attachment-large {
	clear: both;
	height: auto;
	margin: 0 auto 2.8rem auto !important;
	width: 100%;
}

.wp-caption {
  margin-bottom: 1em;
  max-width: 100%;
}

  .wp-caption.alignleft {
  	margin-right: 1.5rem;
  }

  .wp-caption.alignright {
  	margin-left: 1.5rem;
  }

  .wp-caption .alignone {
    clear: both;
    display: block;
  }

.wp-caption img {
  max-width: 100%;
	width: 100%;
}

/* Lawyerist Survival Guides Landing Page */

#survival_guides a img,
.page-id-82537 a img {
  transition: transform .2s;
}
/* ... */

